# ragpipe

./: .env_example  .gitignore  404.html  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
docs/: mkdocs.yml
docs/src/: README.md
examples/: README.md  billionaires.py  billionaires.yml  insurance.py  insurance.yml  startups.py  startups.yml  test_all.py
examples/data/: billionaires.md
examples/data/insurance/: niva-short.mmd
examples/data/startups/: startups_demo-small.json  startups_demo-vsmall.json
examples/insurance/: insurance.py  insurance.yml
examples/quickstart/: README.md  pg.ipynb  project.py  project.yml
examples/sec10k/: sec10k.py  sec10k.yml
ext/libs/: bm25.py  bm25s.py  bmx.py  colpali.py  model2vec.py  mxbai.py
ragpipe/: __init__.py  bridge.py  colbert.py  common.py  config.py  db.py  docnode.py  encoders.py  flow.py  fusion.py  index.py  judges.py  llm_bridge.py  llms.py  ops.py  planner.py  prompts.py  prompts.yaml  prompts_misc.yaml  rag_components.py
ragpipe/ingest/parsers/: docling_parser.py  images.py  pdf_parsers.py
search/: search_index.json
