[tool.poetry]
name = "ragpipe"
version = "0.0.2"
description = "ragpipe: iterate quickly on your RAG pipelines."
authors = ["Nishant Sinha <nishant@offnote.co>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "ragpipe"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
llama-index = ">=0.10.7"
fastembed = "*"
rank_bm25 = "*"
litellm = "*"

typer = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ipykernel = "^6.29.0"
mkdocs-material = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
filterwarnings = "ignore::DeprecationWarning"