[tool.poetry]
name = "ragpipe"
version = "0.0.2.8"
description = "ragpipe: iterate quickly on your RAG pipelines."
authors = ["Nishant Sinha <nishant@offnote.co>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "ragpipe"}, {include = "ext"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
llama-index = ">=0.10.7"
fastembed = "*"
sentence-transformers = "*"
rank_bm25 = "*"
litellm = "*"
ollama = "*"
chromadb = "*"
jinja2 = "*"
safetensors = "*"
typer = "*"
sympy = "*"
pdf2image = "*"

[tool.poetry.extras]
db = ["qdrant_client"]
bm25ext = ['baguetter']

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ipykernel = "^6.29.0"
mkdocs-material = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pytest]
filterwarnings = "ignore::DeprecationWarning"